# Nazkell

./: CMakeLists.txt  main.cpp  readme.md
examples/: fibonacci.nz
include/: body.h  declaration.h  definition.h  expression.h  expressions.h  findentificator.h  identificator.h  lexer.h  literal.h  operator.h  parser.h  reserved_id.h  stack_function.h  symbol.h  token.h  value.h  value_type.h
src/: body.cpp  boolean_expression.cpp  comprehension_list.cpp  declaration.cpp  definition.cpp  expression.cpp  fidentificator.cpp  function_expression.cpp  identificator.cpp  if_expression.cpp  integer_expression.cpp  lexer.cpp  operator.cpp  operator_expression.cpp  parser.cpp  range_list.cpp  reserved_id.cpp  simple_list.cpp  symbol.cpp  token.cpp  variable_expression.cpp
test/: lexer_test.cpp  main_test.cpp  parser_test.cpp  parser_tests.cpp  testfile.nz  token_tests.cpp
